syntax = "proto3" ;
option java_package = "fr.eya.uwblink.uwbranging.data" ;
option java_multiple_files = true ;


enum  DeviceType {
  CONTROLLER =  0 ;
  CONTROLLEE = 1 ;
}


enum ConfigType {
  CONFIG_UNICAST_DS_TWR = 0;
  CONFIG_MULTICAST_DS_TWR = 1;
}

message AppSettings {
  DeviceType device_type = 1;
  string device_display_name = 2;
  string device_uuid = 3;
  ConfigType config_type = 4;
}
